Added lists and sets; add builtin example