@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>dev.resteasy.grpc</groupId>
-        <artifactId>resteasy-grpc-testsuite</artifactId>
-        <version>1.0.0.Alpha3</version>
+        <artifactId>resteasy-grpc-test-bom</artifactId>
+        <version>1.0.0.Alpha6-SNAPSHOT</version>
+        <relativePath />
     </parent>
     <properties>
         <maven.compiler.parameters>true</maven.compiler.parameters>
@@ -22,11 +23,18 @@
         <!-- Server properties -->
         <server.test.feature.pack.groupId>org.wildfly</server.test.feature.pack.groupId>
         <server.test.feature.pack.artifactId>wildfly-ee-galleon-pack</server.test.feature.pack.artifactId>
-        <server.test.feature.pack.version>28.0.0.Final</server.test.feature.pack.version>
+        <server.test.feature.pack.version>31.0.1.Final</server.test.feature.pack.version>
+
         <!-- For grpc-bridge test -->
         <wildfly.grpc.test.feature.pack.groupId>org.wildfly.extras.grpc</wildfly.grpc.test.feature.pack.groupId>
         <wildfly.grpc.test.feature.pack.artifactId>wildfly-grpc-feature-pack</wildfly.grpc.test.feature.pack.artifactId>
-        <wildfly.grpc.test.feature.pack.version>0.1.0.Final</wildfly.grpc.test.feature.pack.version>
+        <wildfly.grpc.test.feature.pack.version>0.1.3.Final</wildfly.grpc.test.feature.pack.version>
+        <grpc.example.version>1.0.0.Alpha7-SNAPSHOT</grpc.example.version>
+        
+        <!-- other versions -->
+        <javax.annotation.version>1.3.2</javax.annotation.version>
+        <wildfly.maven.plugin.version>4.2.1.Final</wildfly.maven.plugin.version>
+        <protoc-gen-grpc-java.version>1.63.0</protoc-gen-grpc-java.version>
     </properties>
     <artifactId>grpc-tests</artifactId>
     <name>RESTEasy Main testsuite: gRPC tests</name>
@@ -50,7 +58,7 @@
                     <plugin>
                         <groupId>org.wildfly.plugins</groupId>
                         <artifactId>wildfly-maven-plugin</artifactId>
-                        <version>4.1.0.Final</version>
+                        <version>${wildfly.maven.plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>server-provisioning</id>
@@ -99,19 +107,19 @@
         <dependency>
 			<groupId>dev.resteasy.examples</groupId>
 			<artifactId>grpcToRest.example.grpc</artifactId>
-			<version>1.0.0.Final-SNAPSHOT</version>
+			<version>${grpc.example.version}</version>
 			<type>war</type>
 		</dependency>
         <dependency>
 			<groupId>dev.resteasy.examples</groupId>
 			<artifactId>grpcToRest.example.grpc</artifactId>
-			<version>1.0.0.Final-SNAPSHOT</version>
+			<version>${grpc.example.version}</version>
 			<type>jar</type>
 		</dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
+            <version>${javax.annotation.version}</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -142,7 +150,7 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>protoc-gen-grpc-java</artifactId>
-            <version>1.54.1</version>
+            <version>${protoc-gen-grpc-java.version}</version>
             <type>pom</type>
         </dependency>
         <dependency>
@@ -237,12 +245,13 @@
                     <systemPropertyVariables>
                         <server.config.dir>${jboss.home}/standalone/configuration</server.config.dir>
                     </systemPropertyVariables>
+                    <argLine>--add-opens java.base/java.lang.reflect=ALL-UNNAMED -Dgrpc.example.version=${grpc.example.version}</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
-                <version>4.1.0.Final</version>
+                <version>${wildfly.maven.plugin.version}</version>
                 <configuration>
                     <jboss-home>${jboss.home}</jboss-home>
                     <provisioning-dir>${jboss.home}</provisioning-dir>
